@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3595 2003/09/30 17:44:45 recht Exp $
+$NetBSD: CHANGES,v 1.3596 2003/09/30 17:59:59 sjg Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -4030,3 +4030,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated rocksndiamonds-sdl to 3.0.5 [adam 2003-09-30]
 	Updated pkglint to 3.62 [abs 2003-09-30]
 	Added pygopherd 2.0.3 [recht 2003-09-30]
+	Updated mk-files to 20030930 [sjg 2003-09-30]
